--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
         <title>My Resume</title>
     </head>
     <body>
-        <h1>Summary:</h1>
+        <h1>My Resume:</h1>
+        <hr/>
+        <h2>Summary:</h2>
         <p>I am currently learning Web Development and working hard to get a job in this  field of development.</p>
         <img src="./Muzi.jpg"/ width="400"  alt="Picture of Muzammil" />
         <h3>Muzammil Hussain Parvi</h3>
         
 
         <hr/>
-        <h1>Education:</h1>
+        <h2>Education:</h2>
         <ul>
             <li>Olevels from Islambad Convent School (2018-2020)</li>
             <li>F.SC Pre Engineering from Concordia College (2020-2022)</li>
@@ -20,12 +22,12 @@
         <br/>
         </ul>
         <hr/>
-        <h1>Work Experience:</h1>
+        <h2>Work Experience:</h2>
         <ul>
             <li>Web Development Internship at CodeCamp ( 1 Month )</li>
         </ul>
         <hr/>
-        <h1>Skills:</h1>
+        <h2>Skills:</h2>
         <ol>
             <li>
                 Object Oriented Programming (C++)
@@ -34,7 +36,7 @@
             <li>MS Word</li>
             <li>MS Powerpoint</li>
         </ol>
-        <h1>Awards/Certifications:</h1>
+        <h2>Awards/Certifications:</h2>
         <ul>
             <li>Frontend Development Certification from Code Camp</li>
         </ul>
